--- a/requirements.txt
+++ b/requirements.txt
@@ -38,7 +38,7 @@ matplotlib==3.1.0
 more-itertools==7.0.0
 nbconvert==5.5.0
 nbformat==4.4.0
-nltk==3.4.4
+nltk>=3.4.5
 nose==1.3.7
 notebook==6.0.0
 numpy==1.16.4
